o Fixed some problems when printing CIPSOv4 and map information when not using
  the '-p' flag
o Always display an error message if an error occurred, based on patch from
  Klaus Weidner <klaus@atsec.com>
o Included a patch from Hagen Paul Pfeifer <pfeifer@netlab.nec.de> to fix a
  problem when building with LIBNL_VERSION >= 1006

* Release Release 0.17 (September 28, 2006)
------------------------------------------------------------------------------
o Changed to support the updated use of Netlink attributes by NetLabel
o Ported to use the libnl (version 1.0-pre5/6) library
o Try to cleanup the error reporting a little bit
o Changed the version/release information

* Version 0.16 (August 3, 2006)
------------------------------------------------------------------------------
o Added a "version" flag (-V)
o Moved the mapping commands to the new "map" class
o Added support for the unlabeled list command
o Updated the documentation to bring it up to date with the current options
o Cleanup the libnetlabel interfaces a little bit
o Shift to using Netlink attributes, at some point we should use libnetlink

* Version 0.15 (July 6, 2006)
------------------------------------------------------------------------------
o Modified the Netlink communication bits to support the newly aligned fields

* Version 0.14 (June 27, 2006)
------------------------------------------------------------------------------
o Added a RPM specfile based on a version from Steve Grubb <sgrubb@redhat.com>
o Minor Makefile changes to ease tarball and RPM creation
o Modified the Netlink communication bits to support the new Generic Netlink
  communication mechanism

* Version 0.13 (June 23, 2006)
------------------------------------------------------------------------------
o Added some text to the README to explain how to remove any pre-existing
  NetLabel configuration
o Added two patches from Klaus Weidner <klaus@atsec.com> to add some error
  messages and better sendmsg() error reporting