@@ -9,6 +9,7 @@ o Always display an error message if an error occurred, based on patch from
   Klaus Weidner <klaus@atsec.com>
 o Included a patch from Hagen Paul Pfeifer <pfeifer@netlab.nec.de> to fix a
   problem when building with LIBNL_VERSION >= 1006
+o Only use size_t and not ssize_t to specify datum sizes/lengths
 
 * Release Release 0.17 (September 28, 2006)
 ------------------------------------------------------------------------------
